// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`facetHeader > renders the collapse icon when the facet is expanded 1`] = `
{
  "_$changedProperties": Map {},
  "_$litPart$": _ChildPart {
    "_$committedValue": TemplateInstance {
      "_$disconnectableChildren": undefined,
      "_$parent": [Circular],
      "_$parts": [
        _ChildPart {
          "_$committedValue": Symbol(lit-nothing),
          "_$disconnectableChildren": undefined,
          "_$endNode": <!--?-->,
          "_$parent": [Circular],
          "_$startNode": <!--?lit$184585850$-->,
          "__isConnected": true,
          "_textSanitizer": undefined,
          "options": {
            "host": [Circular],
            "isConnected": true,
          },
          "type": 2,
        },
      ],
      "_$template": _Template {
        "el": <template />,
        "parts": [
          {
            "index": 0,
            "type": 2,
          },
        ],
      },
    },
    "_$disconnectableChildren": undefined,
    "_$endNode": null,
    "_$parent": undefined,
    "_$startNode": <!---->,
    "__isConnected": true,
    "_textSanitizer": undefined,
    "options": {
      "host": [Circular],
      "isConnected": true,
    },
    "type": 2,
  },
  "__childPart": _ChildPart {
    "_$committedValue": TemplateInstance {
      "_$disconnectableChildren": undefined,
      "_$parent": [Circular],
      "_$parts": [
        _ChildPart {
          "_$committedValue": Symbol(lit-nothing),
          "_$disconnectableChildren": undefined,
          "_$endNode": <!--?-->,
          "_$parent": [Circular],
          "_$startNode": <!--?lit$184585850$-->,
          "__isConnected": true,
          "_textSanitizer": undefined,
          "options": {
            "host": [Circular],
            "isConnected": true,
          },
          "type": 2,
        },
      ],
      "_$template": _Template {
        "el": <template />,
        "parts": [
          {
            "index": 0,
            "type": 2,
          },
        ],
      },
    },
    "_$disconnectableChildren": undefined,
    "_$endNode": null,
    "_$parent": undefined,
    "_$startNode": <!---->,
    "__isConnected": true,
    "_textSanitizer": undefined,
    "options": {
      "host": [Circular],
      "isConnected": true,
    },
    "type": 2,
  },
  "__controllers": Set {
    BindingController {
      "host": [Error: The "atomic-icon" element must be the child of the following elements: atomic-recs-interface, atomic-search-interface, atomic-commerce-interface, atomic-commerce-recommendation-interface, atomic-relevance-inspector, atomic-insight-interface, atomic-external],
      "unsubscribeLanguage": [Function],
    },
  },
  "__instanceProperties": undefined,
  "__reflectingProperties": undefined,
  "__reflectingProperty": null,
  "__updatePromise": Promise {},
  "enableUpdating": [Function],
  "hasUpdated": true,
  "initialized": true,
  "isUpdatePending": false,
  "renderOptions": {
    "host": [Circular],
    "isConnected": true,
  },
  "renderRoot": [Circular],
  Symbol(svg (@property() cache)): null,
  Symbol(icon (@property() cache)): "<svg viewBox="0 0 12.6 7.2" xmlns="http://www.w3.org/2000/svg"><path d="m11.3 7.04c-.3 0-.5-.1-.7-.3l-4.6-4.6-4.6 4.6c-.4.4-1 .4-1.4 0s-.4-1 0-1.4l5.2-5.2c.4-.4 1.2-.4 1.6 0l5.2 5.2c.4.4.4 1 0 1.4-.2.2-.4.3-.7.3"/></svg>",
  Symbol(error (@property() cache)): [Error: The "atomic-icon" element must be the child of the following elements: atomic-recs-interface, atomic-search-interface, atomic-commerce-interface, atomic-commerce-recommendation-interface, atomic-relevance-inspector, atomic-insight-interface, atomic-external],
}
`;

exports[`facetHeader > renders the expand icon when the facet is collapsed 1`] = `
{
  "_$changedProperties": Map {},
  "_$litPart$": _ChildPart {
    "_$committedValue": TemplateInstance {
      "_$disconnectableChildren": undefined,
      "_$parent": [Circular],
      "_$parts": [
        _ChildPart {
          "_$committedValue": Symbol(lit-nothing),
          "_$disconnectableChildren": undefined,
          "_$endNode": <!--?-->,
          "_$parent": [Circular],
          "_$startNode": <!--?lit$184585850$-->,
          "__isConnected": true,
          "_textSanitizer": undefined,
          "options": {
            "host": [Circular],
            "isConnected": true,
          },
          "type": 2,
        },
      ],
      "_$template": _Template {
        "el": <template />,
        "parts": [
          {
            "index": 0,
            "type": 2,
          },
        ],
      },
    },
    "_$disconnectableChildren": undefined,
    "_$endNode": null,
    "_$parent": undefined,
    "_$startNode": <!---->,
    "__isConnected": true,
    "_textSanitizer": undefined,
    "options": {
      "host": [Circular],
      "isConnected": true,
    },
    "type": 2,
  },
  "__childPart": _ChildPart {
    "_$committedValue": TemplateInstance {
      "_$disconnectableChildren": undefined,
      "_$parent": [Circular],
      "_$parts": [
        _ChildPart {
          "_$committedValue": Symbol(lit-nothing),
          "_$disconnectableChildren": undefined,
          "_$endNode": <!--?-->,
          "_$parent": [Circular],
          "_$startNode": <!--?lit$184585850$-->,
          "__isConnected": true,
          "_textSanitizer": undefined,
          "options": {
            "host": [Circular],
            "isConnected": true,
          },
          "type": 2,
        },
      ],
      "_$template": _Template {
        "el": <template />,
        "parts": [
          {
            "index": 0,
            "type": 2,
          },
        ],
      },
    },
    "_$disconnectableChildren": undefined,
    "_$endNode": null,
    "_$parent": undefined,
    "_$startNode": <!---->,
    "__isConnected": true,
    "_textSanitizer": undefined,
    "options": {
      "host": [Circular],
      "isConnected": true,
    },
    "type": 2,
  },
  "__controllers": Set {
    BindingController {
      "host": [Error: The "atomic-icon" element must be the child of the following elements: atomic-recs-interface, atomic-search-interface, atomic-commerce-interface, atomic-commerce-recommendation-interface, atomic-relevance-inspector, atomic-insight-interface, atomic-external],
      "unsubscribeLanguage": [Function],
    },
  },
  "__instanceProperties": undefined,
  "__reflectingProperties": undefined,
  "__reflectingProperty": null,
  "__updatePromise": Promise {},
  "enableUpdating": [Function],
  "hasUpdated": true,
  "initialized": true,
  "isUpdatePending": false,
  "renderOptions": {
    "host": [Circular],
    "isConnected": true,
  },
  "renderRoot": [Circular],
  Symbol(svg (@property() cache)): null,
  Symbol(icon (@property() cache)): "<svg viewBox="0 0 12.6 7.2" xmlns="http://www.w3.org/2000/svg"><path d="m11.421 7.04c-.3 0-.5-.1-.7-.3l-4.6-4.6-4.6 4.6c-.4.4-1 .4-1.4 0s-.4-1 0-1.4l5.2-5.2c.4-.4 1.2-.4 1.6 0l5.2 5.2c.4.4.4 1 0 1.4-.2.2-.4.3-.7.3" transform="matrix(-1 0 0 -1 12.366 7.086)"/></svg>",
  Symbol(error (@property() cache)): [Error: The "atomic-icon" element must be the child of the following elements: atomic-recs-interface, atomic-search-interface, atomic-commerce-interface, atomic-commerce-recommendation-interface, atomic-relevance-inspector, atomic-insight-interface, atomic-external],
}
`;
